<resources>
    <string name="app_name">Gift</string>
    <string name="app_name1">Xin đừng gỡ em mà huhu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="sign_in">sign in</string>
    <string name="success">Add Success</string>
    <string name="fail">fail</string>
    <string name="more_option">More options</string>
    <string name="forgot_password">Forgot password</string>
    <string name="create_account">Create an account</string>
    <string name="user_name">user name</string>
    <string name="pass_word">pass word</string>
    <string name="confirm_pass_word">confirm pass word</string>
    <string name="email">email</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_success">Create an account success</string>
    <string name="sign_up_fail">Sign up fail</string>
    <string name="second">second</string>
    <string name="go_page">You will return to the Login page for</string>
    <string name="seconds">seconds</string>
    <string name="wrong_pass">Wrong pass word</string>
    <string name="no_user">No user name is</string>
    <string name="sign_in_success">Sign in success</string>
    <string name="remember">Remember</string>
    <string name="event">Your events</string>
    <string name="client">Clients?</string>
    <string name="exit">Exit</string>
    <string name="update">Update</string>
    <string name="add">Add event</string>
    <string name="date">Date</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="hour">Hour</string>
    <string name="munite">Minute</string>
    <string name="repeat">Repeat?</string>
    <string name="no_clients">No clients</string>
    <string name="message">Message</string>
    <string name="image">Image</string>
    <string name="music">Music</string>
    <string name="video">Video</string>
    <string name="notification">Notification</string>
    <string name="notification_before">Notificaion before</string>
    <string name="create_event">Create event</string>
    <string name="time">Time?</string>
    <string name="description">Description?</string>
    <string name="event_name">Event name</string>
    <string name="choose_client">Choose client</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="addEvent">Add event</string>
    <string name="add_event_success">Add success</string>
    <string name="add_event_fail">Add fail!</string>
    <string name="textDemo">Happy Birthday</string>
    <string name="client_name">Remote name</string>
    <string name="add_client">Add Remote Client</string>
    <string name="new_message">You have a message</string>
    <string name="welcom">Welcome to Gift Client</string>
    <string name="welcome">Welcome</string>
    <string name="to">to</string>
    <string name="gift_client">Gift Client</string>
    <string name="allow">Allows to use the camera and location for the best viewing experience</string>
    <string name="update_success">Update success</string>
    <string name="log_in">Log in</string>
    <array name="country_arrays">
        <item>Việt nam</item>
        <item>Thái Lan</item>
        <item>Lào</item>
        <item>Campuchia</item>
    </array>
</resources>
