<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:gravity="center"
    tools:context="com.example.administrator.giftclient.MainActivity">
<LinearLayout

    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent">
    <ImageView
        android:src="@mipmap/gift"
        android:layout_width="100dp"
        android:layout_height="100dp" />
    <TextView
        android:textColor="@color/white"
        android:id="@+id/tv_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/welcome"
        android:textSize="@dimen/welcome_size" />

    <TextView
        android:textColor="@color/white"
        android:id="@+id/tv_to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/to" />
    <TextView
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:id="@+id/tv_gift_client"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="@dimen/gift_client_size"
        android:text="@string/gift_client" />
    <TextView
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:id="@+id/tv_allow_camera"
        android:text="@string/allow"
        android:layout_height="wrap_content" />
</LinearLayout>
</RelativeLayout>
