<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:padding="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <EditText
            android:id="@+id/et_client_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edit_text_username"
            android:hint="@string/client_name"
            android:paddingLeft="10dp"
            android:textColor="@color/editTextUserNameBorder"
            android:textColorHint="@color/editTextUserNameBorder" />

        <EditText
            android:id="@+id/et_descripton"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_username"
            android:hint="@string/description"
            android:paddingLeft="10dp"
            android:textColor="@color/editTextUserNameBorder"
            android:textColorHint="@color/editTextUserNameBorder" />

        <Button
            android:id="@+id/bt_add_client"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:text="@string/add_client" />

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textColor="@color/editTextUserNameBorder" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">
        <ProgressBar
            android:id="@+id/pb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible" />
    </LinearLayout>
</RelativeLayout>